# fourier

./: .gitignore  README.md  fourier.cabal  stack.yaml
app/: hmatrix_intro.hs
src/: Huffman.hs  MyRepaToHMatrix.hs
